# AdvancedDummyPlugin

./: AdvancedDummyPlugin.cpp  AdvancedDummyPlugin.h  AdvancedDummyPlugin.qrc  CMakeLists.txt
